Ajout de l'accès a la fiche d'un livre

--- a/views/index.html
+++ b/views/index.html
@@ -30,6 +30,9 @@ html(lang="en")
 							b| Theme : 
 							|#{livre.theme}
 							br
+							a(href='/books/' + livre._id) Accéder à la fiche du livre
+							br
+							br
 							input(type='submit' value= 'Supprimer')
 		h1 Ajouter un livre
 		form(action='/books/new' method='POST')
