Ajout du répertoire data + Ajout de la création de prêts

--- a/views/index.html
+++ b/views/index.html
@@ -30,7 +30,7 @@ html(lang="en")
 							b| Theme : 
 							|#{livre.theme}
 							br
-							a(href='/books/' + livre._id) Accéder à la fiche du livre
+							a(href='/books/' + livre._id + '/edit') Accéder à la fiche du livre
 							br
 							br
 							input(type='submit' value= 'Supprimer')
